Actualización final del proyecto: Agregadas imágenes de autos, corregidas rutas SCSS, actualizada página de contacto, optimizadas imágenes y favicon

--- a/css/scss/pages/_auctions.scss
+++ b/css/scss/pages/_auctions.scss
@@ -1,7 +1,7 @@
 .auctions-hero {
     height: 300px;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-                url('../images/MiniCooper.png') center/cover no-repeat;
+                url('../images/backgrounds/hero-products.jpg') center/cover no-repeat;
     margin-top: 56px;
     @include flex-center;
     text-align: center;
