--- a/css/scss/pages/_home.scss
+++ b/css/scss/pages/_home.scss
@@ -1,7 +1,7 @@
 .home-hero {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-                url('../images/Audi R8.png') center/cover no-repeat;
+                url('../images/backgrounds/hero-home.jpg') center/cover no-repeat;
     display: flex;
     align-items: center;
     text-align: center;
