--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,21 +1,25 @@
-// Variables
-@import 'variables';
+// Variables & Mixins
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
 
-// Mixins
-@import 'mixins';
-
-// Base styles
-@import 'base';
+// Base Styles
+@import 'base/reset';
+@import 'base/typography';
 
 // Components
-@import 'components/navbar';
-@import 'components/cards';
 @import 'components/buttons';
-@import 'components/footer';
+@import 'components/cards';
+@import 'components/forms';
+@import 'components/navbar';
+
+// Layout
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/grid';
 
 // Pages
 @import 'pages/home';
 @import 'pages/products';
-@import 'pages/auctions';
 @import 'pages/contact';
-@import 'pages/auth'; 
+@import 'pages/login';
+@import 'pages/register'; 
